# RecipeSuggestor

./: .gitignore  Notes.txt  README.md  STRUCTURE.md  docker.yml
backend/: .gitignore  .pdm-python  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: database.db  main.py
backend/app/api/: __init__.py  routes_favorites.py  routes_openai.py
backend/app/models/: __init__.py  models.py
backend/app/services/: __init__.py  favorites_database.py  openai_service.py
frontend/: .gitignore  index.html  package-lock.json
frontend/app/: index.html  package.json  vite.config.ts
frontend/app/src/: App.css  App.tsx  index.css
frontend/app/src/components/: FavoritesCard.css  FavoritesCard.tsx  FavoritesDisplay.css  FavoritesDisplay.tsx  Header.css  Header.tsx  IngredientItem.css  IngredientItem.tsx  IngredientsList.css  IngredientsList.tsx  InputForm.css  InputForm.tsx  RecipeCard.css  RecipeCard.tsx  RecipeDisplay.css  RecipeDisplay.tsx
frontend/app/src/components/FavoritesCard/: FavoritesCard.css  FavoritesCard.tsx  index.tsx
frontend/app/src/components/FavoritesDisplay/: FavoritesDisplay.css  FavoritesDisplay.tsx  index.tsx
frontend/app/src/components/Header/: Header.css
frontend/app/src/components/IngredientItem/: IngredientItem.tsx  index.tsx
frontend/app/src/constants/: categories.ts  categories.tsx
frontend/app/src/containers/: RecipeFinderContainer.css  RecipeFinderContainer.tsx  RecipesContainer.tsx
frontend/app/src/services/: api.tsx
frontend/app/src/types/: index.ts  index.tsx
(+6 files in other folders)
